--- a/index.html
+++ b/index.html
@@ -51,6 +51,68 @@
 
             </div>
 
+            <button class="btn btn-primary">Entrar</button>
+
+            <button class="btn-mobile">
+                <ion-icon name="menu-outline"></ion-icon>
+            </button>
+
+            <nav class="navbar">
+
+                <div class="navbar-top">
+                    <a href="index.html">
+                        <img src="img/Realmente_não_sei-removebg-preview.png" alt="logo" />
+                    </a>
+
+                    <button class="menu-close">
+                        <ion-icon name="close-outline"></ion-icon>
+                    </button>
+                </div>
+
+                <ul class="navbar-list">
+                    <li>
+                        <a href="index.html" class="navbar-link">Home</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="navbar-link">Jogos</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="navbar-link">Melhores</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="navbar-link">Séries</a>
+                    </li>
+
+                    <li>
+                        <a href="#" class="navbar-link">Preços</a>
+                    </li>
+                </ul>
+
+                <ul class="navbar-social-list">
+                    <li>
+                        <a href="#" class="navbar-social-link">
+                            <ion-icon name="logo-twitch"></ion-icon>
+                        </a>
+
+                        <li>
+                            <a href="#" class="navbar-social-link">
+                                <ion-icon name="logo-youtube"></ion-icon>
+                            </a>
+
+                            <li>
+                                
+                                    <li>
+                                        <a href="#" class="navbar-social-link">
+                                            <ion-icon name="logo-xbox"></ion-icon>
+                                        </a>
+                                </a>
+                    </li>
+                </ul>
+            </nav>
+
         </div>
     </header>
 
