--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
+            <div class="overlay" data-overlay></div>
             <a href="index.html" class="logo">
                 <img src="img/Realmente_não_sei-removebg-preview.png" alt="Play" />
             </a>
@@ -49,22 +50,23 @@
                     </select>
                 </div>
 
+                <button class="btn btn-primary">Entrar</button>
             </div>
 
-            <button class="btn btn-primary">Entrar</button>
+           
 
-            <button class="btn-mobile">
-                <ion-icon name="menu-outline"></ion-icon>
+            <button class="btn-mobile" data-menu-open>
+                <ion-icon name="reorder-three-outline"></ion-icon>
             </button>
 
-            <nav class="navbar">
+            <nav class="navbar" data-navbar>
 
                 <div class="navbar-top">
                     <a href="index.html">
                         <img src="img/Realmente_não_sei-removebg-preview.png" alt="logo" />
                     </a>
 
-                    <button class="menu-close">
+                    <button class="menu-close" data-menu-close>
                         <ion-icon name="close-outline"></ion-icon>
                     </button>
                 </div>
